// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromoMovieCard component Should render according to the snapshot when movie is provided 1`] = `
<div>
  <section
    class="movie-card"
    style="background-color: black;"
  >
    
    <h1
      class="visually-hidden"
    />
    <header
      class="page-header movie-card__head"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="user-block"
      />
    </header>
    <div
      class="movie-card__wrap"
    >
      <div
        class="movie-card__info"
      >
        
        <div
          class="movie-card__desc"
        >
          <h2
            class="movie-card__title"
          />
          <p
            class="movie-card__meta"
          >
            
            
          </p>
          <div
            class="movie-card__buttons"
          >
            <button
              class="btn btn--play movie-card__button"
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlink:href="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`PromoMovieCard component Should render according to the snapshot when promo movie is loading 1`] = `
<div>
  <section
    class="movie-card movie-card--empty"
    style="background-color: black;"
  >
    
    <h1
      class="visually-hidden"
    />
    <header
      class="page-header movie-card__head movie-card__head--empty"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="container container--centered container--absolute"
      >
        <div
          class="spinner-loading"
        >
          <div />
          <div />
          <div />
          <div />
          <div />
          <div />
          <div />
          <div />
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
      <div
        class="user-block"
      />
    </header>
    <div
      class="movie-card__wrap"
    >
      <div
        class="movie-card__info"
      >
        
      </div>
    </div>
  </section>
</div>
`;

exports[`PromoMovieCard component Should render according to the snapshot when there is no movie provided 1`] = `
<div>
  <section
    class="movie-card movie-card--empty"
    style="background-color: black;"
  >
    
    <h1
      class="visually-hidden"
    />
    <header
      class="page-header movie-card__head movie-card__head--empty"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="user-block"
      />
    </header>
    <div
      class="movie-card__wrap"
    >
      <div
        class="movie-card__info"
      >
        
      </div>
    </div>
  </section>
</div>
`;

exports[`PromoMovieCard component Should render according to the snapshot when there is no movie provided 2`] = `
<div>
  <section
    class="movie-card movie-card--empty"
    style="background-color: black;"
  >
    
    <h1
      class="visually-hidden"
    />
    <header
      class="page-header movie-card__head movie-card__head--empty"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="user-block"
      />
    </header>
    <div
      class="movie-card__wrap"
    >
      <div
        class="movie-card__info"
      >
        
      </div>
    </div>
  </section>
</div>
`;

exports[`PromoMovieCard component Should render according to the snapshot when there is no movie provided 3`] = `
<div>
  <section
    class="movie-card movie-card--empty"
    style="background-color: black;"
  >
    
    <h1
      class="visually-hidden"
    />
    <header
      class="page-header movie-card__head movie-card__head--empty"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="user-block"
      />
    </header>
    <div
      class="movie-card__wrap"
    >
      <div
        class="movie-card__info"
      >
        
      </div>
    </div>
  </section>
</div>
`;
